2011-07-30
 * cnst_alt and cnst_alt_v API calls

2011-07-28
 * Added --noauth device option

2011-07-17
 * Rotator device type, Pyxis Optec rotator driver

2011-07-06
 * Added support for AstroHaven Enterprises domes 

2011-07-06
 * Added Tbalance BigNG Fan/Temp control module

2011-07-02
 * Added notvisible option for GRBd (to control recording of targets never visible from observatory location)

2011-07-01
 * API for selecting targets by labels

2011-06-30
 * first release of simulator capability

2011-06-16
 * getSatisfiedIntervals method

2011-05-20
 * Meade LX200 driver split from generic LX200

2011-05-18
 * inotify for constraints

2011-05-17
 * getNextParamDoubleTime (for timeoffsets specified with +)

2011-02-08
 * added loopcount command to script stdin/out
 * single script command

2011-02-01
 * finished and documented (man page) rts2-queue
 * removed rts2-clearq (replaced with --clear option to rts2-queue)

2011-01-31
 * move all Rts2Values to rts2core, removed Rts2 prefix

2011-01-30
 * added --run-as option to run under different user

2011-01-24
 * changed man pages format - add rts2.ent file with entities for common options etc..

2011-01-14
 * QueuedTarget class

2011-01-11
 * set api (HTTP-based)

2011-01-10
 * added Time arrays

2011-01-03
 * .rts2 page expansion
 * HIGHEST, WESTEAST queue types

2010-12-26
 * added parameters for focusing weak images (e.g. from Ondrejov 65cm)

2010-12-15
 * added reset-constraints option to rts2-target

2010-12-14
 * maxRepeat constraint
 * added comments to indicate failed Auger cuts

2010-12-11
 * added rnight query for ready night master state

2010-12-07
 * fixed redhat and slackware init files
 * fixed ARC support, confirms it is working

2010-11-28
 * added ExecutorQueue for queues inside executor

2010-11-27
 * change default sorting of devices in rts2-mon

2010-11-22
 * stop move state

2010-11-11
 * rts2-user can delete users

2010-11-08
 * autofocusing scripts

2010-11-07