@@ -1,3 +1,9 @@
+2011-09-04
+ * Startup and Shutdown states
+
+2011-08-14
+ * DEVICE_NEED_RELOAD state
+
 2011-07-30
  * cnst_alt and cnst_alt_v API calls
 
